--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -12,8 +12,8 @@
                 Contacts
             </h5>
             <br>
-            <p><b>Mobile:</b> (066) 573-89-96<br/>
-                <b>E-mail:</b> merikbest2015@gmail.com</p>
+            <p><b>Mobile:</b> 0963903199<br/>
+                <b>E-mail:</b> anh15042002hla@gmail.com</p>
             <br>
             <h6>Working time</h6>
             <p>
