--- a/src/main/resources/templates/fragments/common-fragments.html
+++ b/src/main/resources/templates/fragments/common-fragments.html
@@ -175,16 +175,16 @@
         <div class="d-flex justify-content-between">
             <div class="footer-left">
                 <h3>Perfume</h3>
-                <p>(066) 696-66-23</p>
+                <p>0963903199</p>
                 <br/>
                 <p>from 08:00 to 20:00 without breaks and weekends</p>
             </div>
             <div class="footer-right">
                 <h3>Social networks</h3>
-                <a href="https://www.linkedin.com/in/merikbest/">
+                <a href="#">
                     <i class="fab fa-linkedin fa-2x mr-3" style="color:white"></i>
                 </a>
-                <a href="#"><i class="fab fa-facebook-f fa-2x mr-3" style="color:white"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100008512567763"><i class="fab fa-facebook-f fa-2x mr-3" style="color:white"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x mr-3" style="color:white"></i></a>
             </div>
         </div>
