--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -9,10 +9,10 @@
         <div class="container py-5 bg-white shadow-sm card-height">
             <p class="h4 mb-4 text-center">
                 <i class="fas fa-shopping-cart mr-2"></i>
-                Cart
+                Giỏ hàng của tôi
             </p>
             <div class="text-center" th:if="${perfumes.size() == 0}">
-                <p>Cart is empty</p>
+                <p>Chưa có sản phẩm nào !</p>
             </div>
             <div th:if="${perfumes.size() > 0}">
                 <div class="card mb-3 mx-auto" style="max-width: 940px;" th:each="perfume : ${perfumes}">
@@ -34,7 +34,7 @@
                                 <form class="d-inline" action="/cart/remove" method="post">
                                     <button class="btn btn-warning mb-2">
                                         <i class="far fa-minus-square mr-2"></i>
-                                        Remove
+                                        Xóa
                                     </button>
                                     <input type="hidden" name="perfumeId" th:value="${perfume.getId()}">
                                 </form>
@@ -52,7 +52,7 @@
                             <div class="form-row">
                                 <button class="btn btn-success">
                                     <i class="fas fa-shopping-bag mr-2"></i>
-                                    Checkout
+                                    Đặt hàng
                                 </button>
                             </div>
                         </form>
