--- a/src/main/resources/templates/email/registration-template.html
+++ b/src/main/resources/templates/email/registration-template.html
@@ -16,10 +16,10 @@
 <table align="center" class="table">
     <tr>
         <td style="background-color: #ffffff; padding: 40px 30px 40px 30px; text-align: center">
-            <h3>Hello <span th:text="${firstName}" th:remove="tag"></span>!</h3>
-            <p>Welcome to Perfume online store.</p>
-            <p>To complete registration please follow the link: </p>
-            <a th:href="@{${url} + ${activationCode}}">confirm registration</a>
+            <h3>Xin chào,  <span th:text="${firstName}" th:remove="tag"></span>!</h3>
+            <p>Chào mừng bạn đã đăng ký trên shop online của chúng tôi !!</p>
+            <p>Để kích hoạt tài khoản, xin kích vào đường link dưới đây: </p>
+            <a th:href="@{${url} + ${activationCode}}">xác nhận đăng ký</a>
         </td>
     </tr>
 </table>
