--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -12,7 +12,7 @@
                     <h2 class="text-center mb-5">
                         <i class="fas fa-fire-extinguisher"></i>
                         <i class="fas fa-fire"></i>
-                        Internal server error
+                        Máy chủ tạm thời đang bảo trì !
                     </h2>
                 </div>
             </div>
