--- a/src/main/resources/templates/fragments/common-fragments.html
+++ b/src/main/resources/templates/fragments/common-fragments.html
@@ -36,13 +36,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
-                        <a class="nav-link pl-5 pr-5" href="/">HOME</a>
+                        <a class="nav-link pl-5 pr-5" href="/">TRANG CHỦ</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pl-5 pr-5" href="/perfume">PERFUMES</a>
+                        <a class="nav-link pl-5 pr-5" href="/perfume">NƯỚC HOA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link pl-5 pr-5" href="/user/contacts">CONTACTS</a>
+                        <a class="nav-link pl-5 pr-5" href="/user/contacts">LIÊN HỆ</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav ml-auto">
@@ -55,7 +55,7 @@
                         <li class="nav-item">
                             <a class="nav-link pl-5" href="/user/account">
                                 <i class="fas fa-user mr-2"></i>
-                                MY ACCOUNT
+                                TÀI KHOẢN
                             </a>
                         </li>
                         <form id="logout" action="/logout" method="post">
@@ -63,7 +63,7 @@
                                 <a class="nav-link" href=# onclick="document.getElementById('logout').submit()">
                                     <input type="hidden"/>
                                     <i class="fas fa-sign-out-alt mr-2"></i>
-                                    EXIT
+                                    THOÁT
                                 </a>
                             </li>
                         </form>
@@ -72,13 +72,13 @@
                         <li class="nav-item">
                             <a class="nav-link pl-5" href="/login">
                                 <i class="fas fa-sign-in-alt mr-2"></i>
-                                LOGIN
+                                ĐĂNG NHẬP
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link pl-5" href="/registration">
                                 <i class="fas fa-user-plus mr-2"></i>
-                                REGISTRATION
+                                ĐĂNG KÝ
                             </a>
                         </li>
                     </th:block>
@@ -163,7 +163,7 @@
         <div class="col-md-5">
             <button type="submit" class="btn btn-dark">
                 <i class="fas fa-search mr-2"></i>
-                Search
+                Tìm kiếm
             </button>
         </div>
     </div>
@@ -174,22 +174,21 @@
     <div class="container">
         <div class="d-flex justify-content-between">
             <div class="footer-left">
-                <h3>Perfume</h3>
-                <p>0963903199</p>
+                <h3>NƯỚC HOA</h3>
+                <p>0344193063</p>
                 <br/>
-                <p>from 08:00 to 20:00 without breaks and weekends</p>
             </div>
             <div class="footer-right">
-                <h3>Social networks</h3>
+                <h3>Mạng xã hội</h3>
                 <a href="#">
                     <i class="fab fa-linkedin fa-2x mr-3" style="color:white"></i>
                 </a>
-                <a href="https://www.facebook.com/profile.php?id=100008512567763"><i class="fab fa-facebook-f fa-2x mr-3" style="color:white"></i></a>
+                <a href=""><i class="fab fa-facebook-f fa-2x mr-3" style="color:white"></i></a>
                 <a href="#"><i class="fab fa-twitter fa-2x mr-3" style="color:white"></i></a>
             </div>
         </div>
         <div class="mx-auto" style="width: 200px;">
-            <p>© Copy right merikbest</p>
+            <p>© Copy right Nguyen Van Cuong - Do duc anh - Ha ngoc tuan Anh</p>
         </div>
     </div>
     </nav>
