--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
         </a>
     </div>
     <div class="container text-center my-3 mt-5">
-        <h3>BRANDS</h3>
+        <h3>NHÃN HIỆU NƯỚC HOA</h3>
         <div id="perfumerCarousel" class="carousel slide w-100" data-ride="carousel">
             <div class="carousel-inner w-100" role="listbox">
                 <div class="carousel-item row active">
@@ -78,7 +78,7 @@
         </div>
     </div>
     <div class="container text-center my-3">
-        <h4>PERSONALLY RECOMMENDED</h4>
+        <h4>CÓ THỂ BẠN SẼ THÍCH</h4>
     </div>
     <div class="container mt-5">
         <form method="get" action="/perfume/popular">
