--- a/src/main/resources/templates/order-finalize.html
+++ b/src/main/resources/templates/order-finalize.html
@@ -9,8 +9,8 @@
     <div class="py-5">
         <div class="container py-5 px-5 bg-white shadow-sm card-height">
             <div class="container text-center">
-                <h2>Thank you for the order!</h2>
-                <p>Your order number is: <span th:text="${orderId}"></span></p>
+                <h2>Đặt hàng thành công!</h2>
+                <p>Mã đơn hàng của bạn là: <span th:text="${orderId}"></span></p>
             </div>
         </div>
     </div>
