--- a/src/main/resources/templates/admin-all-users.html
+++ b/src/main/resources/templates/admin-all-users.html
@@ -11,29 +11,29 @@
                 <th:block th:replace="fragments/account-fragments :: account-sidebar"/>
                 <div class="col-md-10">
                     <th:block th:replace="fragments/common-fragments :: info-title(
-                        text='List of all users',
+                        text='Danh sách người dùng',
                         icon='fas fa-users ml-2 mr-2'
                     )"/>
                     <form class="my-3" action="/admin/users/search" method="get" style="justify-content: center">
                         <div th:replace="~{fragments/common-fragments :: search(
                             options=(${ {
                                 { value: 'email', text: 'Email' },
-                                { value: 'firstName', text: 'First Name' },
-                                { value: 'lastName', text: 'Last Name' }
+                                { value: 'firstName', text: 'Họ' },
+                                { value: 'lastName', text: 'Tên' }
                             } })
                         )}"></div>
                     </form>
                     <div th:insert="~{fragments/common-fragments :: pagination}"></div>
                     <th:block th:if="${page.getContent().size() == 0}"
-                              th:insert="~{fragments/common-fragments :: empty-result(text='Users not found')}"/>
+                              th:insert="~{fragments/common-fragments :: empty-result(text='Không có người dùng này !')}"/>
                     <table th:unless="${page.getContent().size() == 0}" class="table mt-4 border text-center">
                         <thead class="table-active">
                         <tr>
                             <th>id</th>
-                            <th>First name</th>
-                            <th>Last name</th>
+                            <th>Họ</th>
+                            <th>Tên</th>
                             <th>E-mail</th>
-                            <th>Role</th>
+                            <th>Quyền</th>
                             <th></th>
                         </tr>
                         </thead>
@@ -46,7 +46,7 @@
                             <th th:text="${user.getRoles().iterator().next()}"></th>
                             <th>
                                 <a th:href="@{/admin/user/{userId} (userId = ${user.getId()})}">
-                                    Show more
+                                    Xem thêm
                                 </a>
                             </th>
                         </tr>
