--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -9,20 +9,20 @@
         <div class="container py-5 bg-white shadow-sm card-height">
             <h5>
                 <i class="fas fa-info-circle mr-2"></i>
-                Contacts
+                Thông tin liên hệ
             </h5>
             <br>
             <p><b>Mobile:</b> 0963903199<br/>
                 <b>E-mail:</b> anh15042002hla@gmail.com</p>
             <br>
-            <h6>Working time</h6>
+            <h6>Thời gian làm việc</h6>
             <p>
-                The online store is open from 08:00 to 20:00 without breaks and weekends. <br/>
-                Online orders are accepted around the clock.
+                08:00 to 20:00 <br/>
+
             </p>
             <br>
-            <h6>Delivery</h6>
-            <p>Delivery of orders come through courier service.</p>
+            <h6>Thông tin giao vận </h6>
+            <p>GHN - NINJA VAN - GRAB - SHOPPEE EXPRESS</p>
         </div>
 
     </div>
