--- a/src/main/resources/templates/email/order-template.html
+++ b/src/main/resources/templates/email/order-template.html
@@ -42,18 +42,18 @@
                 </tr>
             </table>
             <hr/>
-            <h3 style="text-align: center">Hello <span th:text="${order.getFirstName()}" th:remove="tag"></span>!</h3>
-            <p style="text-align: center">Thank you for your order in Perfume online store.</p>
+            <h3 style="text-align: center">Xin chào,  <span th:text="${order.getFirstName()}" th:remove="tag"></span>!</h3>
+            <p style="text-align: center">Cảm ơn bạn đã đặt hàng !</p>
             <hr/>
             <div class="text-left">
-                <p><b>Your order number is: <span th:text="${order.getId()}" th:remove="tag"></span></b></p>
-                <p><b>Date:</b> <span th:text="${#temporals.format(order.getDate(), 'yyyy-MM-dd HH:mm')}" th:remove="tag"></span></p>
-                <p><b>Name:</b> <span th:text="${order.getFirstName() + ' ' + order.getLastName()}"
+                <p><b>Mã đơn hàng của bạn là: <span th:text="${order.getId()}" th:remove="tag"></span></b></p>
+                <p><b>Ngày:</b> <span th:text="${#temporals.format(order.getDate(), 'yyyy-MM-dd HH:mm')}" th:remove="tag"></span></p>
+                <p><b>Họ và tên:</b> <span th:text="${order.getFirstName() + ' ' + order.getLastName()}"
                                       th:remove="tag"></span></p>
-                <p><b>Address:</b> <span th:text="${order.getCity() + ' ' + order.getAddress()}" th:remove="tag"></span>
+                <p><b>Địa chỉ:</b> <span th:text="${order.getCity() + ' ' + order.getAddress()}" th:remove="tag"></span>
                 </p>
-                <p><b>Post index:</b> <span th:text="${order.getPostIndex()}" th:remove="tag"></span></p>
-                <p><b>Phone:</b> <span th:text="${order.getPhoneNumber()}" th:remove="tag"></span></p>
+                <p><b>Mã post:</b> <span th:text="${order.getPostIndex()}" th:remove="tag"></span></p>
+                <p><b>Số điện thoại:</b> <span th:text="${order.getPhoneNumber()}" th:remove="tag"></span></p>
             </div>
             <th:block th:each="perfume : ${order.getPerfumes()}">
                 <hr/>
@@ -79,7 +79,7 @@
                 </table>
             </th:block>
             <hr/>
-            <h3>Total price: $ <span th:text="${order.getTotalPrice()}" th:remove="tag"></span></h3>
+            <h3>Thanh toán:  <span th:text="${order.getTotalPrice()}" th:remove="tag"></span>đ</h3>
         </td>
     </tr>
 </table>
