--- a/src/main/resources/templates/email/password-reset-template.html
+++ b/src/main/resources/templates/email/password-reset-template.html
@@ -16,10 +16,10 @@
 <table align="center" class="table">
     <tr>
         <td style="background-color: #ffffff; padding: 40px 30px 40px 30px; text-align: center">
-            <h3>Hello <span th:text="${firstName}" th:remove="tag"></span>!</h3>
-            <p>We have received a request to reset the password for your account.</p>
-            <p>To reset your password, follow this link : </p>
-            <a th:href="@{${url} + ${resetCode}}">confirm reset password</a>
+            <h3>Xin chào, <span th:text="${firstName}" th:remove="tag"></span>!</h3>
+            <p>Chúng tôi đã nhận được yêu cầu lấy lại mật khẩu của bạn !</p>
+            <p>Để xác thực tài khoản, bạn hãy nhấn vào đường link dưới đây : </p>
+            <a th:href="@{${url} + ${resetCode}}">Xác thực mật khẩu</a>
         </td>
     </tr>
 </table>
