--- a/src/main/resources/templates/fragments/perfumes-fragments.html
+++ b/src/main/resources/templates/fragments/perfumes-fragments.html
@@ -4,11 +4,11 @@
         <div class="card-body text-center">
             <h5 th:text="${perfume.getPerfumeTitle()}"></h5>
             <h6 th:text="${perfume.getPerfumer()}"></h6>
-            <h6>$<span th:text="${perfume.getPrice()}"></span>.00</h6>
+            <h6><span th:text="${perfume.getPrice()}"></span>đ</h6>
         </div>
         <div class="text-center align-items-end mb-3">
             <a th:href="@{/perfume/{perfumeId} (perfumeId = ${perfume.getId()})}" class="btn btn-dark">
-                SHOW MORE
+                XEM THÊM
             </a>
         </div>
     </div>
