--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
     <div class="py-5">
         <div class="container py-1 bg-white shadow-sm card-height">
             <div th:if="${session['SPRING_SECURITY_LAST_EXCEPTION']}" class="alert alert-danger col-sm-8 mt-3" role="alert">
-                Invalid Email Or Password
+                Email hoặc mật khẩu không chính xác
             </div>
             <th:block th:replace="fragments/common-fragments :: alert-message"/>
             <form method="post" action="/login">
@@ -17,7 +17,7 @@
                         <div class="col-md-6">
                             <h4 class="mr-3">
                                 <i class="fas fa-sign-in-alt mr-3"></i>
-                                SIGN IN
+                                ĐĂNG NHẬP
                             </h4>
                             <hr />
                             <div class="form-group row">
@@ -37,10 +37,10 @@
                             <div class="form-group row">
                                 <button type="submit" class="btn btn-dark mx-2">
                                     <i class="fas fa-sign-in-alt mr-3"></i>
-                                    Sign in
+                                    Đăng nhập
                                 </button>
                                 <a href="/auth/forgot" class="forgot-password ml-3">
-                                    Forgot password?
+                                        Quên mật khẩu ?
                                 </a>
                             </div>
                         </div>
