--- a/src/main/resources/templates/ordering.html
+++ b/src/main/resources/templates/ordering.html
@@ -11,7 +11,7 @@
             <form action="/order" method="post" enctype="multipart/form-data">
                 <h4 class="mb-4 text-center">
                     <i class="fas fa-shopping-bag mr-2"></i>
-                    Ordering
+                    Đơn hàng
                 </h4>
                 <br/>
                 <div class="row">
@@ -63,7 +63,7 @@
                             <div class="col-sm-8">
                                 <input type="text" name="phoneNumber" th:value="${order} ? ${order.phoneNumber} : ''"
                                        class="form-control" th:classappend="${phoneNumberError} ? ' is-invalid'"
-                                       placeholder="380__ ___ __ __"/>
+                                       placeholder="+84__ ___ __ __"/>
                                 <div th:if="${phoneNumberError}" class="invalid-feedback"
                                      th:text="${phoneNumberError}"></div>
                             </div>
@@ -88,7 +88,7 @@
                                         <div class="card-body text-center">
                                             <h5 th:text="${perfume.getPerfumeTitle()}"></h5>
                                             <h6 th:text="${perfume.getPerfumer()}"></h6>
-                                            <h6>$<span th:text="${perfume.getPrice()}"></span>.00</h6>
+                                            <h6><span th:text="${perfume.getPrice()}"></span>đ</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -96,11 +96,11 @@
                         </div>
                         <button class="btn btn-primary btn-lg btn-success px-5 float-right">
                             <i class="fas fa-check-circle"></i>
-                            Validate order
+                            Xác thực đơn hàng
                         </button>
                         <input type="hidden" name="totalPrice" th:value="${#aggregates.sum(perfumes.![price])}">
                         <div class="row">
-                            <h4>To pay: $ <span th:text="${#aggregates.sum(perfumes.![price])}"></span>.00</h4>
+                            <h4>Tiền thanh toán: $ <span th:text="${#aggregates.sum(perfumes.![price])}"></span>đ</h4>
                         </div>
                     </div>
                 </div>
