--- a/src/main/resources/templates/perfumes.html
+++ b/src/main/resources/templates/perfumes.html
@@ -8,11 +8,11 @@
     <div class="container d-flex bg-white shadow-sm">
         <nav id="sidebar">
             <div class="sidebar-header">
-                <h3>Perfumes</h3>
+                <h3>Nước hoa</h3>
             </div>
             <form action="/perfume" method="get">
                 <ul class="list-unstyled components">
-                    <h5>Brand</h5>
+                    <h5>Nhãn hiệu</h5>
                     <li class="active mb-2" id="homeSubmenu">
                         <ul class="list-unstyled">
                             <li th:insert="fragments/perfumes-fragments :: perfumes-brand-checkbox('Burberry')"></li>
@@ -41,14 +41,14 @@
                             <li th:insert="fragments/perfumes-fragments :: perfumes-brand-checkbox('Victoria`s Secret')"></li>
                         </ul>
                     </li>
-                    <h5>Gender</h5>
+                    <h5>Giới tính</h5>
                     <li class="active mb-2">
                         <ul class="list-unstyled">
                             <li th:insert="fragments/perfumes-fragments :: perfumes-gender-checkbox('female')"></li>
                             <li th:insert="fragments/perfumes-fragments :: perfumes-gender-checkbox('male')"></li>
                         </ul>
                     </li>
-                    <h5>Price</h5>
+                    <h5>Giá</h5>
                     <li class="active mb-2">
                         <ul class="list-unstyled">
                             <li th:insert="fragments/perfumes-fragments :: perfumes-price-checkbox(startingPrice=0, endingPrice=200)"></li>
@@ -78,7 +78,7 @@
                 <div class="container-fluid">
                     <div class="row" th:fragment="list">
                         <th:block th:if="${page.getContent().size() == 0}"
-                                  th:insert="~{fragments/common-fragments :: empty-result(text='Perfumes not found')}"/>
+                                  th:insert="~{fragments/common-fragments :: empty-result(text='Không có loại nước hoa cần tìm !')}"/>
                         <th:block th:unless="${page.getContent().size() == 0}" th:each="perfume : ${page.getContent()}">
                             <th:block th:replace="fragments/perfumes-fragments :: perfume-item(${perfume})"/>
                         </th:block>
