--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -13,7 +13,7 @@
                         <div class="col-md-6">
                             <h4 class="mr-3">
                                 <i class="fas fa-user-plus mr-3"></i>
-                                SIGN UP
+                                ĐĂNG KÝ
                             </h4>
                             <hr/>
                             <div class="form-group row">
@@ -26,7 +26,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">First name: </label>
+                                <label class="col-sm-4 col-form-label">Tên: </label>
                                 <i class="fas fa-user" style="position: relative; top: 8px"></i>
                                 <div class="col-sm-7">
                                     <input type="text" name="firstName" th:value="${user} ? ${user.firstName} : ''"
@@ -35,7 +35,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Password: </label>
+                                <label class="col-sm-4 col-form-label">Mật khẩu: </label>
                                 <i class="fas fa-lock" style="position: relative; top: 8px"></i>
                                 <div class="col-sm-7">
                                     <input type="password" name="password" class="form-control"
@@ -44,7 +44,7 @@
                                 </div>
                             </div>
                             <div class="form-group row">
-                                <label class="col-sm-4 col-form-label">Confirm password: </label>
+                                <label class="col-sm-4 col-form-label">Nhập lại mật khẩu: </label>
                                 <i class="fas fa-lock" style="position: relative; top: 8px"></i>
                                 <div class="col-sm-7">
                                     <input type="password" name="password2" class="form-control"
