fix add perfume

--- a/src/main/resources/templates/perfumes.html
+++ b/src/main/resources/templates/perfumes.html
@@ -66,9 +66,9 @@
                 <form action="/perfume/search" method="get" style="justify-content: center">
                     <th:block th:replace="~{fragments/common-fragments :: search(
                         options=(${ {
-                            { value: 'perfumer', text: 'Brand' },
-                            { value: 'perfumeTitle', text: 'Perfume title' },
-                            { value: 'country', text: 'Manufacturer country' }
+                            { value: 'perfumer', text: 'Nhãn hiệu' },
+                            { value: 'perfumeTitle', text: 'Tên nước hoa' },
+                            { value: 'country', text: 'Nơi sản xuất' }
                         } })
                     )}"/>
                 </form>
