--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,12 +9,12 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <a th:href="@{/perfume/85}">
-                    <img class="d-block w-100" src="https://i.ibb.co/dkpHPXQ/1million-ENG.jpg" alt="First slide">
+                    <img class="d-block w-75 mx-auto h-50" src="https://i.ibb.co/dkpHPXQ/1million-ENG.jpg" alt="First slide">
                 </a>
             </div>
             <div class="carousel-item">
                 <a th:href="@{/perfume/46}">
-                    <img class="d-block w-100" src="https://i.ibb.co/C0vbNcy/dior-ENG.jpg" alt="Second slide">
+                    <img class="d-block w-75 mx-auto h-50" src="https://i.ibb.co/C0vbNcy/dior-ENG.jpg" alt="Second slide">
                 </a>
             </div>
         </div>
